--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,11 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <input type="text" id="search-box" />
+    <input
+      type="text"
+      placeholder="Enter the name of the country"
+      id="search-box"
+    />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
 
